--- a/src/assets/scss/theme-element.scss
+++ b/src/assets/scss/theme-element.scss
@@ -208,3 +208,7 @@
     transform: scale(0.95, 1.05);
   }
 }
+
+.v-modal {
+  animation: none !important;
+}
